--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,7 +286,7 @@ h6 {
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("../img/wall.jpg") top right no-repeat;
+    background: url("../img/data-wall.jpg") top right no-repeat;
     background-size: cover;
     position: relative;
 }
